Fixed mobile overflow

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -13,6 +13,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   z-index: 0;
+  overflow-x: hidden;
 }
 
 @media (min-width: 992px) {
